--- a/central_limit_theorem_illustration.ipynb
+++ b/central_limit_theorem_illustration.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Central Limit Theorem illustration\n",
     "\n",
-    "Inspired by an illustration in Agresti, Statistical Methods for the Social Sciences, 2018, 5th Ed., pg.100. \n",
+    "Inspired by Agresti, Statistical Methods for the Social Sciences, 2018, 5th Ed., pg.100. \n",
     "\n",
     "An illustration of the central limit theorem. The code repeatedly draws samples (of three different sizes) from a set of underlying population distributions (some of which are very non-normal). A plot is then created showing that the sampling distribution of the mean gets more precise and more normal as the sample size increases, regardless of the (non)normality of the underlying population."
    ]
